# contextir

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SPEC.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
checkpoints/: baseline_translator.json  semantic_encoder.npz  semantic_translator.json  sir_ml_core_smoke.npz  sir_neural_kernel_smoke.npz
configs/: default.yaml
contextir/: __init__.py  clients.py  dataset.py  gateway.py  pipeline.py  sir_dataset_export.py  sir_graph.py  sir_graph_core.py  sir_graph_embedding_core.py  sir_ml_core.py  sir_neural_kernel.py  sir_roundtrip.py  sir_runtime.py  sir_sources.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  LEGACY_ROUNDTRIP.md  PRODUCT_SCOPE.md  QUICKSTART.md  RESEARCH_HISTORY.md  ROUNDTRIP_BENCHMARK.md  SIR_ML_CORE_ARCHITECTURE.md
reports/: contextir_gateway_eval.json  examples.md  metrics.json  privacy_presidio_eval.json  roundtrip_eval.json  roundtrip_examples.md  semantic_clusters.csv  sir_graph_core_eval.json  sir_graph_core_valid_eval.json  sir_graph_embedding_eval.json  sir_graph_embedding_long_eval.json  sir_graph_embedding_long_valid_eval.json  sir_graph_embedding_valid_eval.json  sir_kernel_smoke.json  sir_ml_core_smoke_eval.json  sir_neural_kernel_eval.json  sir_neural_kernel_train.json  sir_neural_kernel_train_eval.json  sir_resemantic_eval.json  sir_runtime_smoke.json
schemas/: contextir_contract_v2.schema.json  sir_contract_v1.schema.json
scripts/: build_concept_graph.py  build_concept_sources.py  build_dataset.py  build_sir_training_dataset.py  demo.py  evaluate.py  evaluate_contextir.py  evaluate_model_ab.py  evaluate_roundtrip.py  evaluate_sir_kernel.py  evaluate_sir_resemantic.py  evaluate_sir_runtime.py  export_hf_dataset.py  sir_agent_demo.py  sir_kernel.py  (+7 more)
(+70 files in other folders)
